Se creó el html y css de main-body

--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
         </button>
       </nav>
     </header>
+    <section class="main-body">
+      <div class="wrapper">
+        <div title="Texto superior del meme" class="top-text" id="textFontTop">
+          <p aria-hidden= "true">TOP TEXT</p>
+        </div>
+        <div title="Imagen del meme" class="image"></div>
+        <div title="Texto superior del meme" class="bottom-text" id="textFontBottom">
+          <p aria-hidden= "true">BOTTOM TEXT</p>
+        </div>
+      </div>
+      <div class="download">
+        <button id="download-btn">
+          <i aria-hidden= "true" class="fas fa-download"></i> Descargar meme
+        </button>
+      </div>
+    </section>
+  </main>
 
 
 
