Se cambió un texto en html y se eliminó alert

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </button>
         <button aria-label="Cambiar tema" id="btn-theme" class="button-nav">
           <i aria-hidden= "true" class="fas fa-lightbulb"
-            ><span id="text-theme" class="nav-icon">Modo oscuro</span></i
+            ><span id="text-theme" class="nav-icon">Modo claro</span></i
           >
         </button>
       </nav>
